Add error message for room full

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -181,6 +181,7 @@
               }
             }
             button {
+              cursor: pointer;
               border-radius: 10px;
               max-width: 45%;
               box-shadow: 3px 3px 16px 3px rgba(0, 0, 0, 0.5);
