Add google analytics

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -203,8 +203,10 @@
               height: 48px;
               outline: none;
               border: none;
+              color: #2cbb93;
               svg {
                 margin-left: 8%;
+                color: #ECEDED;
               }
             }
             .join-button {
