Change message notification container

--- a/src/assets/scss/custom/roomEntry.scss
+++ b/src/assets/scss/custom/roomEntry.scss
@@ -194,7 +194,7 @@
               }
             }
             .share-button {
-              background: #93e093;
+              background: #2cbb93;
               margin-left: auto;
               min-width: 45%;
               display: flex;
@@ -203,7 +203,7 @@
               height: 48px;
               outline: none;
               border: none;
-              color: #2cbb93;
+              color: #ECEDED;
               svg {
                 margin-left: 8%;
                 color: #ECEDED;
