Fix: dropdown menu in maximize mobile view

--- a/src/assets/scss/custom/roomMain.scss
+++ b/src/assets/scss/custom/roomMain.scss
@@ -199,6 +199,21 @@ body {
       }
     }
   }
+  &.mobile {
+    .dropdown {
+      right: 0;
+      top: 0;
+      .dropdown-content {
+        right: 0;
+        top: 0;
+        .option {
+          span {
+            font-size: small;
+          }
+        }
+      }
+    }
+  }
 
   //.reconnect-message {
   //  font-size: medium;
